--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
+      <button id="theme-toggle">🌙 Toggle Dark Mode</button>
   </header>
 
   <section id="about">
@@ -59,3 +60,10 @@
   </footer>
 </body>
 </html>
+
+<script>
+  const toggle = document.getElementById('theme-toggle');
+  toggle.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+  });
+</script>
