Github Pages update

--- a/index.html
+++ b/index.html
@@ -35,24 +35,15 @@
         Orchestrated modular PySpark jobs with Airflow, parameterized configs via YAML,
         and implemented medallion architecture for reliability and scalability.
       </p>
-      <a href="https://github.com/your-username/Sales_Analytics" target="_blank">View Project</a>
-    </div>
-
-    <div class="project">
-      <h3>Dockerized Airflow Deployment</h3>
-      <p>
-        Built custom Airflow images with reproducible Python dependencies,
-        enabling rapid iteration and portable development environments.
-      </p>
-      <a href="https://github.com/your-username/Airflow-Docker" target="_blank">View Project</a>
+      <a href="https://github.com/KaustavCorp/Sales_Analytics" target="_blank">View Project</a>
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/your-linkedin" target="_blank">linkedin.com/in/your-linkedin</a></p>
-    <p>GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
+    <p>Email: <a href="mailto:kaustavkumardas1992@outlook.com">kaustavkumardas1992@outlook.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/kaustav-kumar-das-b39a75152/" target="_blank">linkedin.com/in/kaustav-kumar-das-b39a75152/</a></p>
+    <p>GitHub: <a href="https://github.com/KaustavCorp" target="_blank">github.com/KaustavCorp</a></p>
   </section>
 
   <footer>
