--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 </head>
 <body>
   <header>
-    <h1>Kaustav</h1>
-    <p>Data Engineer | PySpark | Airflow | Docker</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-      <button id="theme-toggle">🌙 Toggle Dark Mode</button>
-  </header>
+  <div class="header-content">
+    <img src="Profile_Pic.jpg" alt="Kaustav Kumar Das" class="profile-pic">
+    <div class="header-text">
+      <h1>Kaustav Kumar Das</h1>
+      <p>Data Engineer | PySpark | Airflow | Docker</p>
+    </div>
+  </div>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <button id="theme-toggle">🌙 Toggle Dark Mode</button>
+</header>
 
+  <div class="container">
   <section id="about">
     <h2>About Me</h2>
     <p>
@@ -49,6 +55,7 @@
   <footer>
     <p>&copy; 2026 Kaustav | Built with ❤️ using GitHub Pages</p>
   </footer>
+</div>
 
   <script>
       const toggle = document.getElementById('theme-toggle');
